# tespy-gui

./: .gitignore  README.md  flowsheet-designer.html  pyproject.toml
src/: library.js  styles.css
src/tespy_gui/: __init__.py  app.py
src/tespy_gui/static/: flowsheet-designer.html
src/tespy_gui/static/src/: clipboard.js  connections.js  defs.js  history.js  io.js  library.js  main.js  nodes.js  properties.js  state.js  styles.css  ui.js
