[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "tespy-gui"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tespy",
]

[project.optional-dependencies]
dev = [
    "isort>=8.0.1",
]

[project.scripts]
tespy-gui = "tespy_gui.app:main"

[tool.uv.sources]
tespy = { git = "https://github.com/oemof/tespy", branch = "feature/#937-schema-export" }

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "tespy"
default_section = "THIRDPARTY"
forced_separate = "test_tespy"
skip = "migrations"
